syntax = "proto3";
package proto;
option java_multiple_files = true;


message UserRequest {
	int64 nbOfRecords = 1;
}

message UsersResponse {
	repeated User users = 1;
}

message User {
  string firstName = 1;
  string lastName = 2;
	string email = 3;
  int32 age = 4;
}

service UserService {

	rpc readAndSendUsers(UserRequest) returns ( UsersResponse) {};
	
}
